--- a/force-app/main/default/classes/ShareModalController.cls
+++ b/force-app/main/default/classes/ShareModalController.cls
@@ -6,11 +6,18 @@ public without sharing class ShareModalController {
     @AuraEnabled
     public static void sendEmail(String whatId, String fromId, String email, String emailType) {
         try {
-            if (fromId == null)fromId = CommunityService.getUserContact().Id;
+            if (fromId == null) fromId = CommunityService.getUserContact().Id;
             if (emailType == 'SOCIAL_SHARING') {
                 SendEmailTemplate.sendShareEmail(whatId, fromId, email, 'Share_Social_Study_Template');
             } else {
-                SendEmailTemplate.sendShareEmail(whatId, fromId, email, null);
+                Id sourceId = whatId;
+                if(sourceId.getSobjectType() == Participant_Enrollment__c.getSObjectType()){
+                    SendEmailTemplate.sendShareEmail(whatId, fromId, email, 'Share_Study_From_PE_Template');
+                }else if(sourceId.getSobjectType() == HCP_Enrollment__c.getSObjectType()){
+                    SendEmailTemplate.sendShareEmail(whatId, fromId, email, 'Share_Study_From_HCPE_Template');
+                }else{
+                    SendEmailTemplate.sendShareEmail(whatId, fromId, email, null);
+                }
             }
 
         } catch (Exception e) {
