Remove Lab Results Tab on StudyDetailView

--- a/force-app/main/default/classes/ParticipantService.cls
+++ b/force-app/main/default/classes/ParticipantService.cls
@@ -68,6 +68,8 @@ public class ParticipantService {
                             participantState.value = ParticipantStates.ALUMNI;
                             participantState.showVisits = false;
                         }
+                    }else{
+                        participantState.value = ParticipantStates.REFERRAL;
                     }
                 }else{
                     participantState.value = ParticipantStates.REFERRAL;
