add prospect to referal

--- a/force-app/main/default/classes/StudyDetailViewController.cls
+++ b/force-app/main/default/classes/StudyDetailViewController.cls
@@ -277,7 +277,8 @@ public without sharing class StudyDetailViewController {
                         backHomeAction
                 ));
     
-            } else if (participantState.value == ParticipantService.ParticipantStates.REFERRAL) {
+            } else if (participantState.value == ParticipantService.ParticipantStates.REFERRAL
+                        || participantState.value == ParticipantService.ParticipantStates.PROSPECT ) {
                 tabs.add(new StudyTab(
                         'tab-about-the-study',
                         'about-the-study',
