--- a/force-app/main/default/classes/Test_TaskEditRemote.cls
+++ b/force-app/main/default/classes/Test_TaskEditRemote.cls
@@ -5,6 +5,8 @@
 @IsTest
 private class  Test_TaskEditRemote {
 
+    private static Integer i = 0;
+
     public class PatientDelegateServiceMock implements System.StubProvider {
 
         public Object handleMethodCall(Object stubbedObject, String stubbedMethodName, Type returnType,
@@ -12,9 +14,11 @@ private class  Test_TaskEditRemote {
             if (stubbedMethodName == 'getDelegates') {
                 return new List<Contact>();
             } else if(stubbedMethodName == 'getParticipantUserId'){
-                return TestDataFactory.getFakeId(User.getSObjectType());
+                return UserInfo.getUserId();
             } else if(stubbedMethodName == 'getParticipant'){
                 return new Participant__c();
+            } else if (stubbedMethodName == 'getDelegatedUsersIds'){
+                return new List<Id>();
             }
             return null;
         }
@@ -27,6 +31,12 @@ private class  Test_TaskEditRemote {
             if(stubbedMethodName == 'getState'){
                 Participant_Study_Enrollment__c pse = new Participant_Study_Enrollment__c();
                 ParticipantService.ParticipantState state = new ParticipantService.ParticipantState();
+                Clinical_Trial_Profile__c ctp = new Clinical_Trial_Profile__c();
+                ctp.NCT_Number__c = 'NCT0000000' + i;
+                ctp.Protocol_ID__c = 'tt12345677' + i;
+                i++;
+                insert ctp;
+                state.ctp = ctp;
                 state.pse = pse;
                 return state;
             }
@@ -65,9 +75,11 @@ private class  Test_TaskEditRemote {
         Task task = new Task();
         task.Subject = 'test';
         task.Task_Type__c = 'Medication';
+        task.Reminder_Date__c = Datetime.now();
         insert task;
         TaskEditRemote.TaskEditDataWrapper wrapper = new TaskEditRemote.TaskEditDataWrapper();
         TaskEditRemote.getTaskEditData(task.Id);
+        task.Reminder_Date__c = task.Reminder_Date__c.addDays(1);
         TaskEditRemote.upsertTask(task);
         TaskEditRemote.markAsCompleted(task);
         TaskEditRemote.deleteTask(task);
